Coverity analysis defect 146949: Uninitialized scalar field

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-09-01, CAR Team 2025-09-15
    • 1
    • 🟦 Shard Catalog
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/shard_role.h:526: UNINIT_CTOR 146949 The compiler-generated constructor for this class does not initialize "_originalState".

            Assignee:
            Jordi Serra Torrens
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: