SERVER-109117 Initialize StashedTransactionResources _originalState on constuction (#40760)

GitOrigin-RevId: ed0fbcd0b485cf2884e73b0f1ef92fd2bcfd70ab