src/mongo/db/local_catalog/shard_role_api/shard_role.h
@@ -559,7 +559,8 @@ struct StashedTransactionResources {
     void dispose();
 
     std::unique_ptr<shard_role_details::TransactionResources> _yieldedResources;
-    shard_role_details::TransactionResources::State _originalState;
+    shard_role_details::TransactionResources::State _originalState =
+        shard_role_details::TransactionResources::State::EMPTY;
 };
 
 /**
